security_groups.tf
// Seurity Groups
resource "aws_security_group" "httpSSH" {
  name        = "eliorSG"
  description = "Allow SSH and HTTP traffic"
  vpc_id      = aws_vpc.easyway-elior.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = local.common_tags
}
